fix: layout problem from VIC-1047

--- a/src/resources/styles/_layout.scss
+++ b/src/resources/styles/_layout.scss
@@ -2,6 +2,8 @@ html,
 body {
 	height: 100%;
 	min-width: $body-min-width;
+	max-width: 100%;
+	overflow-x: hidden;
 }
 
 html {
